--- a/references.bib
+++ b/references.bib
@@ -1366,3 +1366,36 @@
   DATE_ADDED =   {Mon Aug 22 19:12:56 2016},
 }
 
+@article{khaliullin-2010-graph-diamon,
+  author =       {Rustam Z. Khaliullin and Hagai Eshet and Thomas
+                  D. K{\"u}hne and J{\"o}rg Behler and Michele
+                  Parrinello},
+  title =        {Graphite-Diamond Phase Coexistence Study Employing a
+                  Neural-Network Mapping of the Ab Initio Potential
+                  Energy Surface},
+  journal =      {Phys. Rev. B},
+  volume =       81,
+  number =       10,
+  pages =        100103,
+  year =         2010,
+  doi =          {10.1103/physrevb.81.100103},
+  url =          {http://dx.doi.org/10.1103/PhysRevB.81.100103},
+  DATE_ADDED =   {Mon Aug 29 19:55:57 2016},
+}
+
+@article{khaliullin-2011-nucleat-mechan,
+  author =       {Rustam Z. Khaliullin and Hagai Eshet and Thomas
+                  D. K{\"u}hne and J{\"o}rg Behler and Michele
+                  Parrinello},
+  title =        {Nucleation Mechanism for the Direct
+                  Graphite-To-Diamond Phase Transition},
+  journal =      {Nature Materials},
+  volume =       10,
+  number =       9,
+  pages =        {693-697},
+  year =         2011,
+  doi =          {10.1038/nmat3078},
+  url =          {http://dx.doi.org/10.1038/NMAT3078},
+  DATE_ADDED =   {Mon Aug 29 19:59:39 2016},
+}
+
