--- a/references.bib
+++ b/references.bib
@@ -1399,3 +1399,61 @@
   DATE_ADDED =   {Mon Aug 29 19:59:39 2016},
 }
 
+@article{boes-2016-neural-networ,
+  author =       {Jacob R. Boes and Mitchell C. Groenenboom and John
+                  A. Keith and John R. Kitchin},
+  title =        {Neural Network and Reaxff Comparison for Au
+                  Properties},
+  journal =      {Int. J. Quantum Chem.},
+  volume =       116,
+  number =       13,
+  pages =        {979-987},
+  year =         2016,
+  doi =          {10.1002/qua.25115},
+  url =          {http://dx.doi.org/10.1002/qua.25115},
+  DATE_ADDED =   {Fri Sep 2 14:45:01 2016},
+}
+
+@article{dewapriya-2014-molec-dynam,
+  author =       {M. A. N. Dewapriya and R. K. N. D. Rajapakse},
+  title =        {Molecular Dynamics Simulations and Continuum
+                  Modeling of Temperature and Strain Rate Dependent
+                  Fracture Strength of Graphene With Vacancy Defects},
+  journal =      {Journal of Applied Mechanics},
+  volume =       81,
+  number =       8,
+  pages =        081010,
+  year =         2014,
+  doi =          {10.1115/1.4027681},
+  url =          {http://dx.doi.org/10.1115/1.4027681},
+  DATE_ADDED =   {Fri Sep 2 15:09:17 2016},
+}
+
+@article{ansari-2012-mechan-proper,
+  author =       {R. Ansari and S. Ajori and B. Motevalli},
+  title =        {Mechanical Properties of Defective Single-Layered
+                  Graphene Sheets Via Molecular Dynamics Simulation},
+  journal =      {Superlattices and Microstructures},
+  volume =       51,
+  number =       2,
+  pages =        {274-289},
+  year =         2012,
+  doi =          {10.1016/j.spmi.2011.11.019},
+  url =          {http://dx.doi.org/10.1016/j.spmi.2011.11.019},
+  DATE_ADDED =   {Fri Sep 2 15:20:16 2016},
+}
+
+@article{liu-2007-ab-initio,
+  author =       {Fang Liu and Pingbing Ming and Ju Li},
+  title =        {Ab Initio Calculation of Ideal Strength and Phonon
+                  Instability of Graphene Under Tension},
+  journal =      {Phys. Rev. B},
+  volume =       76,
+  number =       6,
+  pages =        064120,
+  year =         2007,
+  doi =          {10.1103/physrevb.76.064120},
+  url =          {http://dx.doi.org/10.1103/PhysRevB.76.064120},
+  DATE_ADDED =   {Fri Sep 2 15:24:43 2016},
+}
+
